--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -161,7 +161,7 @@
       </div>
       <div class="credits">
        
-        Designed by <a href="DarshanAndOmkar">DarshanAndOmkar</a>
+        Designed by <a href=http://darsion.herokuapp.com >DarshanAndOmkar</a>
       </div>
     </div>
   </footer><!-- End Footer -->
